--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^0.8.0",
     "ethers": "^5.7.2",
+    "@worldcoin/id": "^0.9.2",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
