--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,9 +6,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@next/font": "^13.0.6",
     "@rainbow-me/rainbowkit": "^0.8.0",
-    "ethers": "^5.7.2",
     "@worldcoin/id": "^0.9.2",
+    "ethers": "^5.7.2",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
