--- a/turbo.json
+++ b/turbo.json
@@ -1,4 +1,5 @@
 {
+  "globalDependencies": ["$NEXT_PUBLIC_ALCHEMY"],
   "$schema": "https://turbo.build/schema.json",
   "pipeline": {
     "build": {
