--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next build && next export"
   },
   "dependencies": {
     "@next/font": "^13.0.6",
@@ -13,6 +14,7 @@
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "wagmi": "^0.8.10",
     "web3.storage": "^4.4.0",
     "zustand": "^4.1.4"
